fixed contact time frame for message

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -451,7 +451,7 @@ hr{
   bottom: 0;
   left: -4px;
   width: 2px;
-  background-color: #000; /* Change this color to whatever you prefer */
+  background-color: #000; 
 }
 
 
@@ -612,15 +612,6 @@ hr{
   padding: 10px 0px 35px 75px;
   margin: 0;
 }
-
-
-// .projectImage{
-//   display: flex;
-//   justify-content: right;
-//   height: 10px;
-//   width: 10px;
-// }
-
 
 .projectBody {
   display: flex;
