--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -112,10 +112,11 @@ main{
 }
 
 .jobAm{
-  font-size: 285%;
+  font-size: 350%;
   margin: 0;
   color: black;
-  padding-bottom: 2px;
+  padding-bottom: 02px;
+  padding-top: 5px;
 }
 
 .introLines{
@@ -123,6 +124,7 @@ main{
   padding-top: 0px 0px 0px 0px;
   margin: 0px;
   margin-bottom: 0px;
+  color: black;
 }
 
 
@@ -130,24 +132,24 @@ main{
   padding: 0px 15px 0px 15px;
   color: rgb(177, 38, 98);
   font-size: 150%;
-  padding-top: 0px ;
+  padding-top: 0px;
 }
 
 .homeLineOne{
   display: flex;
   border: none; 
   border-top: 2px solid #c9647a;
-  padding: 10px 0px 0px 0px;
+  padding: 1px 0px 0px 0px;
   margin: 0px auto 0px auto; 
-  width: 23%;
+  width: 450px;
 }
 .homeLineTwo{
   display: flex;
   border: none; 
   border-top: 2px solid #c9647a;
-  padding: 10px 0px 10px 0px;
-  margin: 3px auto 0px auto; 
-  width: 34%;
+  padding: 1px 0px 10px 0px;
+  margin: 1px auto 0px auto; 
+  width: 515px;
 }
 
 
@@ -162,6 +164,7 @@ main{
   flex-direction: column;
   padding-left: 5px;
   padding-right: 5px;
+  color: black;
 }
 
 .inPageLinks{
@@ -199,6 +202,7 @@ hr{
   padding: 15px 0 10px 10px;
   margin: 0;
   text-decoration: underline;
+  color: black;
 }
 
 //Skills
@@ -209,6 +213,7 @@ hr{
   font-size: 225%;
   padding: 10px 0 7px 25px;
   margin: 0;
+  color: black;
 }
 
 .technicalSkillType{
@@ -216,6 +221,7 @@ hr{
   font-size: 140%;
   padding: 7px 0 7px 35px;
   margin: 0;
+  color: black;
 }
 
 .skillInformation{
@@ -223,6 +229,7 @@ hr{
   font-size: 140%;
   padding: 1px 0 2px 45px;
   margin: 0;
+  color: black;
 }
 
 .transferableSkillTypeSection{
@@ -230,6 +237,7 @@ hr{
   font-size: 225%;
   padding: 13px 0 0px 25px;
   margin: 0;
+  color: black;
 }
 
 .transferableSkillInformation{
@@ -237,6 +245,7 @@ hr{
   font-size: 140%;
   padding: 1px 0 2px 35px;
   margin: 0;
+  color: black;
   &::before {
     content: '•'; 
     position: absolute;
@@ -262,6 +271,7 @@ hr{
   font-size: 225%;
   padding: 10px 0 7px 20px;
   margin: 0;
+  color: black;
 }
 
 
@@ -270,6 +280,7 @@ hr{
   font-size: 140%;
   padding: 7px 0 7px 25px;
   margin: 0;
+  color: black;
 }
 
 
@@ -278,6 +289,7 @@ hr{
   font-size: 140%;
   padding: 3px 0 2px 35px;
   margin: 0;
+  color: black;
 }
 
 
@@ -286,6 +298,7 @@ hr{
   font-size: 125%;
   padding: 5px 0 5px 60px;
   margin: 0;
+  color: black;
 
   &::before {
     content: '•'; 
@@ -322,6 +335,7 @@ hr{
   padding: 25px 0 7px 15px;
   margin: 0;
   flex-direction: column;
+  color: black;
 }
 
 .shortTimeJobHeader{
@@ -329,6 +343,7 @@ hr{
     font-size: 150%;
     padding: 2px 0 3px 30px;
     margin: 0;
+    color: black;
 }
 
 .shortKeyAccomplishments{
@@ -336,6 +351,7 @@ hr{
   font-size: 135%;
   padding: 2px 0 0px 40px;
   margin: 0;
+  color: black;
 }
 
 
@@ -344,6 +360,7 @@ hr{
   font-size: 100%;
   padding: 2px 0 0px 50px;
   margin: 0;
+  color: black;
 }
 
 
@@ -357,6 +374,7 @@ hr{
     font-size: 225%;
     padding: 7px 0 0px 20px;
     margin: 0;
+    color: black;
 }
 
 .educationWhat{
@@ -364,6 +382,7 @@ hr{
   font-size: 190%;
   padding: 0px 0 1px 37px;
   margin: 0;
+  color: black;
 }
 
 .aboutEducation{
@@ -372,6 +391,7 @@ hr{
   padding: 2px 0 20px 55px;
   margin: 0;
   font-weight: normal;
+  color: black;
 }
 
 
@@ -396,6 +416,7 @@ hr{
   padding: 10px 0 2px 20px;
   margin: 0;
   font-weight: 150px;
+  color: black;
 }
 
 
@@ -408,6 +429,7 @@ hr{
   padding: 10px 0 10px 50px;
   margin: 0;
   font-weight: normal;
+  color: black;
 }
 
 
@@ -431,7 +453,7 @@ hr{
   flex-direction: row; 
   justify-content: space-between;
   gap: 20px; 
-  
+  color: black;
 }
 
 
@@ -440,6 +462,7 @@ hr{
 .referenceEach {
   padding: 20px 10px 20px 10px; 
   flex: 1; 
+  color: black;
 }
 
 
@@ -450,6 +473,7 @@ hr{
   margin: 0;
   position: relative;
   padding-left: 3px;
+  color: black;
 }
 
 .referenceName::before {
@@ -466,11 +490,13 @@ hr{
 .aboutReference {
   list-style-type: disc; 
   padding-left: 20px; 
+  color: black;
 }
 
 .aboutReference li {
   margin-left: 30px; 
   padding-left: 1px; 
+  color: black;
 }
 
 
@@ -478,6 +504,7 @@ hr{
   margin: 0;
   padding: 0px 20px 0px 10px; 
   font-size: 125%;
+  color: black;
 }
 
 
@@ -494,6 +521,7 @@ hr{
 .aboutMeAll{
   display: flex;
   flex-direction: row;
+  color: black;
 }
 
 .aboutMeImage{
@@ -570,6 +598,7 @@ hr{
   text-decoration: underline;
   padding-top: 0px;
   margin-top: 0px;
+  color: black;
 }
 
 .projectName{
@@ -579,17 +608,20 @@ hr{
   margin: 0;
   text-decoration: underline;
   text-decoration-thickness: 3px;
+  color: black;
 }
 
 .projectBody{
   display: flex;
   flex-direction: row;
+  color: black;
 }
 
 
 .projectInformation{
   display: flex;
   flex-direction: column;
+  color: black;
 }
 
 
@@ -598,6 +630,7 @@ hr{
   font-size: 175%;
   padding: 10px 0px 5px 35px;
   margin: 0;
+  color: black;
 }
 
 .desKey{
@@ -605,6 +638,7 @@ hr{
   font-size: 125%;
   padding: 5px 0px 0px 65px;
   margin: 0;
+  color: black;
   &::before {
     content: '•'; 
     position: absolute;
@@ -617,6 +651,7 @@ hr{
 .allProjectLinks{
   display: flex;
   flex-direction: row;
+  color: black;
 }
 
 .projectLink{
@@ -624,12 +659,14 @@ hr{
   font-size: 150%;
   padding: 10px 0px 35px 75px;
   margin: 0;
+  color: black;
 }
 
 .projectBody {
   display: flex;
   align-items: flex-start;
   gap: 20px; 
+  color: black;
 }
 
 .projectImage {
@@ -640,6 +677,7 @@ hr{
   margin-left: 20px; 
   padding-right: 20px;
   padding-top: 65px;
+  color: black;
 }
 
 
@@ -762,7 +800,7 @@ hr{
   flex-direction: row;
   justify-content: center;
   color: rgb(177, 38, 98);
-  font-size: 140%;
+  font-size: 125%;
   padding: 10px 25px 0px 20px;
   margin: 0;
   padding-bottom: 0;
@@ -770,6 +808,17 @@ hr{
 }
 
 
+.footerLinks{
+  display: flex;
+  flex-direction: column;
+}
+
+.linkFooter{
+  padding: 0px 15px 0px 15px;
+  color: rgb(177, 38, 98);
+  font-size: 125%;
+  padding-bottom: 10px;
+}
 
 
 
